Fixing flags overlap

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,4 +9,5 @@
 }
 .translations img {
 	height: 2em;
+        display: block;
 }
